codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_approval_form_with_session_persist.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  字段 1/1                                                                                                               
  Allow this request?                                                                                                   
  › 1. 仅本次允许     运行该工具并继续。                                                                                  
    2. 仅本会话允许  运行该工具，并在本会话中记住此选择。                                                                
    3. 始终允许      运行该工具，并在未来的调用中记住此选择。                                                            
    4. 取消          取消本次工具调用                                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  回车提交全部 | Esc 取消                                                                                                
